[metadata]
name = ytkubevault
version = attr: ytkubevault.__version__
description = A convenient wrapper for getting secrets from HashiCorp Vault in Kubernetes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Utilities
url = https://github.com/y-tree-limited/ytkubevault

[options]
packages = ytkubevault
python_requires = >=3.8
install_requires =
    importlib; python_version >= "3.8"